# mylittletracker

./: .gitignore  .pre-commit-config.yaml  README.md  pyproject.toml  pytest.ini
src/mylittletracker/: __init__.py  cli.py  models.py  utils.py
src/mylittletracker/providers/: __init__.py  base.py  correos.py  ctt.py  dhl.py  dpd.py  ecoscooting.py  ecoscooting_api_analysis.md  gls.py
tests/: test_async_correos.py  test_async_dhl.py  test_async_dpd.py  test_ctt_parser.py  test_gls_parser.py  test_integration_correos.py  test_integration_dhl.py  test_smoke.py
